Finished tech test
Added shopping cart component

--- a/angular/src/app/products/products.component.html
+++ b/angular/src/app/products/products.component.html
@@ -7,7 +7,7 @@
     <tr>
       <th>Id</th>
       <th>Name</th>
-      <th>Price)</th>
+      <th>Price</th>
       <th>Promotion</th>
     </tr>
   </thead>
